--- a/index2.html
+++ b/index2.html
@@ -83,8 +83,8 @@
       </section>
       <section class="navigation-catalog center">
         <div class="home">
-          <a href="index1.html">Главная </a>
-          <a href="index1.html">&frasl;</a>
+          <a href="index.html">Главная </a>
+          <a href="index.html">&frasl;</a>
         </div>
         <div class="catalog">
           <p>Каталог</p>
