--- a/index3.html
+++ b/index3.html
@@ -85,16 +85,16 @@
       </section>
       <section class="navigation center">
         <div class="home">
-          <a href="index1.html">Главная </a>
-          <a href="index1.html">&frasl;</a>
+          <a href="index.html">Главная </a>
+          <a href="index.html">&frasl;</a>
         </div>
         <div class="catalog">
           <a href="index2.html">Каталог </a>
-          <a href="index1.html"> &frasl;</a>
+          <a href="index2.html"> &frasl;</a>
         </div>
         <div class="Category">
           <a href="index3.html">Категория </a>
-          <a href="index1.html"> &frasl;</a>
+          <a href="index3.html"> &frasl;</a>
         </div>
         <div class="pendant"><p>Подвеска Dolce & Gabanna</p></div>
       </section>
