--- a/index4.html
+++ b/index4.html
@@ -86,8 +86,8 @@
       </section>
       <section class="navigation-Contacts center">
         <div class="home-Contacts">
-          <a href="index1.html">Главная </a>
-          <a href="index1.html">&frasl;</a>
+          <a href="index.html">Главная </a>
+          <a href="index.html">&frasl;</a>
         </div>
         <div class="Contacts"><p>Контакты</p></div>
       </section>
